--- a/html/productos.html
+++ b/html/productos.html
@@ -12,6 +12,9 @@
 <body>
     <header>
         <div class="header_top">
+            <a id="icono" href="index.html">
+                <img src="../img/rhcp.png" >
+            </a>
             <div class="container_barra">
                 <input type="text" id="buscador" class="buscador_input" placeholder=" ">
                 <label for="buscador" class="form-label">Buscador</label>
@@ -208,8 +211,9 @@
     </footer>
     <script src="../js/carrito.js"></script>
     <script src="../js/products.js"></script>
-    <script src="../js/app.js"></script>
+    <script src="../js/main.js"></script>
     <script src="../js/filtros.js"></script>
+    <script>mostrarProductos()</script>
 </body>
 
 </html>
