--- a/html/detalleProducto.html
+++ b/html/detalleProducto.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/detalleProducto.css">
     <title>Producto</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -43,7 +44,20 @@
     </header>
 
     <section>
-       
+        <div id="detalleProducto-card">
+            <div id="header-detalle-producto">
+                <div id="img-product">
+                </div>
+
+                <div id="datos-product">
+
+                </div>
+            </div>
+
+            <div id = "informacion-producto">
+
+            </div>
+        </div>
         <dialog id="carrito-modal"> 
             <div class="headerCarrito">
 
@@ -94,6 +108,7 @@
     <script src="../js/carrito.js"></script>
     <script src="../js/products.js"></script>
     <script src="../js/main.js"></script>
+    <script src="../js/detalleProducto.js"></script>
 </body>
 
 </html>
