--- a/html/index.html
+++ b/html/index.html
@@ -29,13 +29,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="artistas.html" >ARTISTAS</a>
+                        <a href="index.html" style="color: white">INICIO</a>
                     </li>
                     <li>
-                        <a href="album.html">ÁLBUM</a>
+                        <a href="album.html" >ÁLBUMES</a>
                     </li>
                     <li>
-                        <a href="productos.html">PRODUCTOS</a>
+                        <a href="productos.html" >PRODUCTOS</a>
                     </li>
                 </ul>
             </nav>
