--- a/html/pagar.html
+++ b/html/pagar.html
@@ -31,7 +31,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="artistas.html" >ARTISTAS</a>
+                        <a href="index.html" >ARTISTAS</a>
                     </li>
                     <li>
                         <a href="album.html">ÁLBUM</a>
