--- a/html/productos.html
+++ b/html/productos.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/filtros.css">
     <title>Inicio</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -29,10 +30,10 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="artistas.html" >ARTISTAS</a>
+                        <a href="index.html" >INICIO</a>
                     </li>
                     <li>
-                        <a href="album.html">ÁLBUM</a>
+                        <a href="album.html" >ÁLBUMES</a>
                     </li>
                     <li>
                         <a href="productos.html" style="color: white">PRODUCTOS</a>
@@ -211,7 +212,6 @@
     </footer>
     <script src="../js/carrito.js"></script>
     <script src="../js/products.js"></script>
-    <script src="../js/main.js"></script>
     <script src="../js/filtros.js"></script>
     <script>mostrarProductos()</script>
 </body>
