--- a/html/productos.html
+++ b/html/productos.html
@@ -13,9 +13,7 @@
 <body>
     <header>
         <div class="header_top">
-            <a id="icono" href="index.html">
-                <img src="../img/rhcp.png" >
-            </a>
+            
             <div class="container_barra">
                 <input type="text" id="buscador" class="buscador_input" placeholder=" ">
                 <label for="buscador" class="form-label">Buscador</label>
@@ -214,6 +212,7 @@
     <script src="../js/products.js"></script>
     <script src="../js/filtros.js"></script>
     <script>mostrarProductos()</script>
+    <script>hayBusqueda()</script>
 </body>
 
 </html>
