--- a/html/productos.html
+++ b/html/productos.html
@@ -52,7 +52,23 @@
                             <a class="nav-link">Filtros</a>
                         </div>
                     </li>
-                    <li id="genero-filtro" class="list-item list-item-click">
+
+                    <li id="tipo-filtro" class="list-item list-item-click">
+                        <div  class="list-button list-button-click ">
+                            <a class="nav-link">Tipo</a>
+                            <img src="../assets/arrow.svg" class="list-arrow">
+                        </div>
+
+                        <ul class="list-show">
+                            <li id="producto-filtro" class="list-inside">
+                                <a class="nav-link nav-link-inside">Producto</a>
+                            </li>
+                            <li id="album-filtro" class="list-inside">
+                                <a class="nav-link nav-link-inside">Álbum</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li id="genero-filtro" class="list-item list-item-click list-show">
                         <div  class="list-button list-button-click ">
                             <a class="nav-link">Género</a>
                             <img src="../assets/arrow.svg" class="list-arrow">
