--- a/html/pagar.html
+++ b/html/pagar.html
@@ -29,10 +29,10 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="index.html" >ARTISTAS</a>
+                        <a href="index.html">INICIO</a>
                     </li>
                     <li>
-                        <a href="album.html">ÁLBUM</a>
+                        <a href="album.html" >ÁLBUMES</a>
                     </li>
                     <li>
                         <a href="productos.html" >PRODUCTOS</a>
