--- a/html/detalleProducto.html
+++ b/html/detalleProducto.html
@@ -28,13 +28,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="artistas.html" >ARTISTAS</a>
+                        <a href="index.html">INICIO</a>
                     </li>
                     <li>
-                        <a href="album.html">ÁLBUM</a>
+                        <a href="album.html" >ÁLBUMES</a>
                     </li>
                     <li>
-                        <a href="productos.html">PRODUCTOS</a>
+                        <a href="productos.html" >PRODUCTOS</a>
                     </li>
                 </ul>
             </nav>
