--- a/html/index.html
+++ b/html/index.html
@@ -55,10 +55,14 @@
 
     <div class="novedades">
       <div class="novedades-portada">
+        <img src="../img/eminem-portada.png" alt="">
+    </div>
 
-      </div>
-
-      <div class="section-slider">
+    <div class="novedades-title">
+      <h2>Novedades</h2>
+    </div>
+    
+    <div class="section-slider">
         <div class="swiper mySwiper container">
           <div class="swiper-wrapper content">
             <div class="swiper-slide card">
