--- a/html/index.html
+++ b/html/index.html
@@ -16,8 +16,9 @@
 <body>
   <header>
     <div class="header">
-      <div logo>
-
+      <div id="logo">
+        <img class="icono-pag" src="../img/icon.png" alt="">
+        <img class="nombre-pag" src="../img/logo6.png">
       </div>
       <div id="barra_header">
         <nav>
