--- a/html/detalleProducto.html
+++ b/html/detalleProducto.html
@@ -13,8 +13,9 @@
 <body>
     <header>
         <div class="header">
-          <div logo>
-    
+          <div id="logo">
+
+            <img class="nombre-pag" src="../img/portada.png">
           </div>
           <div id="barra_header">
             <nav>
