--- a/html/index.html
+++ b/html/index.html
@@ -17,8 +17,8 @@
   <header>
     <div class="header">
       <div id="logo">
-        <img class="icono-pag" src="../img/icon.png" alt="">
-        <img class="nombre-pag" src="../img/logo6.png">
+
+        <img class="nombre-pag" src="../img/portada.png">
       </div>
       <div id="barra_header">
         <nav>
