--- a/html/pagar.html
+++ b/html/pagar.html
@@ -14,9 +14,10 @@
 <body>
     <header>
         <div class="header">
-          <div logo>
-    
-          </div>
+            <div id="logo">
+
+                <img class="nombre-pag" src="../img/portada.png">
+              </div>
           <div id="barra_header">
             <nav>
               <ul>
